deploy/kubernetes/podinfo-dep.yaml
---
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: podinfo
  annotations:
    flux.weave.works/tag.podinfo: glob:*
    flux.weave.works/automated: 'true'
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
      - name: podinfo
        image: quay.io/stefanprodan/podinfo:1.5.1
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata: 
  name: podinfo-svc
spec: 
  ports: 
     -  port: 80
        protocol: TCP
  selector: 
    app: podinfo
